# Vello-base

./: .env.example  .gitignore  AUTH_SERVICE_IMPLEMENTATION.md  AUTH_SERVICE_SUMMARY.txt  BOOTSTRAP_SUMMARY.md  DATA_API_IMPLEMENTATION.md  DATA_API_MANIFEST.md  DATA_API_SUMMARY.txt  DEPLOYMENT_CHECKLIST.md  Dockerfile  FILES_CHANGED.txt  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.txt  MANIFEST.md  Makefile  QUICK_START_AUTH.md  README.md  RULES_IMPLEMENTATION.md  cli.py  docker-compose.prod.yml  docker-compose.yml  manage.py  ownfirebase.md  postgres-init.sql  pytest.ini  quickstart.sh  render.yaml  requirements.txt
abtesting/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
admin_console/: index.html  package.json  tsconfig.json
ai/: admin.py  apps.py  encryption.py  models.py  serializers.py  services.py  urls.py  views.py
analytics/: admin.py  models.py  serializers.py  urls.py  views.py
api/: __init__.py  apps.py  serializers.py  urls.py  views.py
app_check/: admin.py  apps.py  encryption.py  middleware.py  models.py  serializers.py  services.py  urls.py  views.py
billing/: admin.py  apps.py  models.py  serializers.py  services.py  stripe_service.py  urls.py  views.py
config/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/: __init__.py  admin.py  backends.py  health.py  middleware.py  models.py  observability.py  pagination.py  permissions.py  rls.py  throttling.py
crashlytics/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
data/: INTEGRATION_TEST.sh  README.md  __init__.py  admin.py  apps.py  models.py  query_parser.py  serializers.py  signals.py  urls.py  views.py
docs/: DEPLOYMENT_ONE_CLICK.md  FIREBASE_MIGRATION_GUIDE.md
enhanced_auth/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
functions/: __init__.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
mcp_server/: claude_desktop_config.json  client.py  pyproject.toml  requirements.txt  server.py
mcp_server/tests/: conftest.py  test_mcp_server.py
mcp_server/tools/: abtesting.py  ai.py  analytics.py  app_check.py  auth.py  billing.py  crashlytics.py  data.py  enhanced_auth.py  functions.py  projects.py  push.py  rag.py  remoteconfig.py  social_auth.py  storage.py  webhooks.py
ownfirebase/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
push/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
rag/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
realtime/: __init__.py  apps.py  auth_middleware.py  broadcast.py  consumers.py  presence.py  routing.py  signals.py
remoteconfig/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
rules/: QUICK_START.md  README.md  __init__.py  admin.py  apps.py  dsl.py  models.py  permissions.py  postgres.py
rust/: Cargo.toml
rust/push-worker/: Cargo.toml  Dockerfile
rust/push-worker/src/: apns.rs  db.rs  fcm.rs  main.rs  types.rs  webpush.rs
rust/rules-engine/: Cargo.toml  pyproject.toml
rust/rules-engine/src/: evaluator.rs  lib.rs
sdk/: README.md  jest.config.js  package-lock.json  package.json  (+1 more)
sdk/python-sdk/: .gitignore  LICENSE  README.md  SCAFFOLD_SUMMARY.md  TEST_SUMMARY.md  pyproject.toml  requirements-dev.txt  setup.py
sdk/python-sdk/examples/: __init__.py  basic_auth.py  data_operations.py  full_example.py
sdk/python-sdk/ownfirebase/: __init__.py  abtesting.py  analytics.py  appcheck.py  auth.py  client.py  config.py  crashlytics.py  data.py  errors.py  functions.py  projects.py  push.py  realtime.py  remote_config.py  storage.py  types.py
sdk/python-sdk/tests/: __init__.py  conftest.py  test_abtesting.py  test_analytics.py  test_appcheck.py  test_auth.py  test_client.py  test_config.py  test_crashlytics.py  test_data.py  test_errors.py  test_functions.py  test_integration.py  test_projects.py  test_push.py  test_realtime.py  test_remote_config.py  test_storage.py
(+240 files in other folders)
