[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ownfirebase-mcp"
version = "0.1.0"
description = "MCP server for OwnFirebase backend — exposes all API endpoints as AI-callable tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.scripts]
ownfirebase-mcp = "mcp_server.server:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["mcp_server*"]
