[package]
name = "rules-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rules_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
